<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">二货铺子</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_container">ContainerActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">首页</string>
    <string name="donate">捐赠</string>
    <string name="message">消息</string>
    <string name="markets">集市</string>
    <string name="circle">圈子</string>
    <string name="mine">我的</string>
    <string name="title_activity_edit_user_info">EditUserInfoActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_phone">手机号</string>
    <string name="user_pwd">密码</string>
    <string name="login">登录</string>
    <string name="confirm">确认修改</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_now">立即注册>></string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">注册</string>
    <string name="input_phone_num">请输入您的手机号</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_pwd_xin">请输入新密码</string>
    <string name="input_pwd_again">请重复密码</string>
    <string name="msg_verify_code">获取验证码</string>
    <string name="verify">验证</string>
    <string name="reset">重置密码</string>
    <string name="agree_rule">同意使用二货铺子APP用户注册和使用协议</string>
    <string name="title_activity_publish_goods">PublishGoodsActivity</string>
    <string name="publish_goods">发布贰货</string>
    <string name="goods_name">贰货名字</string>
    <string name="goods_brief">贰货描述,记得要描述的更有吸引力哦</string>
    <string name="types">分类</string>
    <string name="goods_price">价格</string>
    <string name="goods_old_price">原价</string>
    <string name="goods_price_hint">1~5折容易卖出哟</string>
    <string name="goods_price_old_hint">添加原价</string>
    <string name="publish_goods_btn">发布</string>
    <string name="market">主题集市</string>
    <string name="Feedback">感谢您对二货铺子的支持与关注，您的宝贵意见将帮助我们不断进步！</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_she_zhi">SheZhiActivity</string>
    <string name="title_activity_wo_men">WoMenActivity</string>
    <string name="title_activity_postage">PostageActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="main_title">二货铺子</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="title_activity_zhao_hui">ZhaoHuiActivity</string>
    <string name="women_jieshao">\u3000\u3000我们呢，一个nb的组合啦！不多说，就是这么吊</string>
    <!-- 多图片上传，图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="title_activity_donate_request">DonateRequestActivity</string>
    <string name="caring_donation">爱心捐赠</string>
    <string name="request_donation">请求捐赠</string>
    <string name="request_donation_title">先来个标题吧</string>
    <string name="request_donation_content">您需要哪些以及什么样的物品呢？</string>
    <string name="request_donation_add_image">添加图片</string>
    <string name="logistics">物流</string>
    <string name="request_donation_address">东西给您寄到哪里去呢？填个地址吧</string>
    <string name="request_donation_getername">务必要填写收货人哦！</string>
    <string name="request_donation_button_donate">请求捐赠</string>
    <string name="mytoast_text">标题不能为空！</string>
    <string name="donation_user_name">来自星星的我</string>
    <string name="donation_time">2小时前</string>
    <string name="donation_address">四川汶川</string>
    <string name="donation_describe">这些地方房子年久失修，摇摇欲坠，孩子们穿的衣服破破烂烂，教室残破不堪，希望捐赠多一些生活用品，教科书等</string>
    <string name="donation_dialog_title">发布技巧</string>
    <string name="donation_dialog_content_one">1. 标题尽量在15字内</string>
    <string name="donation_dialog_content_two">2. 尽可能描述详尽，例如孩子们的读书环境，居民</string>
    <string name="donation_dialog_content_two_">的生活条件等</string>
    <string name="donation_dialog_content_three">3. 请上传真实照片，描述真实情况</string>
    <string name="donation_dialog_skill_one">1. 图片尽量清晰</string>
    <string name="donation_dialog_skill_two">2. 图片能反映真实情况,包含细节</string>
    <string name="donation_dialog_warning">请发布真实信息，上传真实图片，如果有人给您帮助，请不要忘记在心里说声谢谢，给接收人们带来一份温暖，给捐赠人们增添一份爱心，让爱在这个世界传递！</string>
    <string name="donation_report">举报捐赠</string>
    <string name="title_activity_donation">DonationActivity</string>
    <string name="upload_hint">发布中&#8230;</string>
    <string name="title_activity_classification">ClassificationActivity</string>
    <string name="title_activity_ship_address">ShipAddressActivity</string>
    <string name="title_activity_new_address">NewAddressActivity</string>

    <!-- 分类 -->
    <string name="types_phone">苹果手机</string>
    <string name="types_pad">平板电脑</string>
    <string name="types_pc">笔记本</string>
    <string name="types_xiaomi">小米</string>
    <string name="types_3c">数码3C</string>
    <string name="types_card">书籍文体</string>
    <string name="types_luggage">服装鞋包</string>
    <string name="types_perfume">美容美体</string>
    <string name="types_others">其他</string>
    <string name="title_activity_goods_detial">GoodsDetialActivity</string>

    <!-- 商品详情 -->
    <string name="goodsDetial">二货详情</string>
    <string name="share">分享</string>
    <string name="report">举报</string>
    <string name="chat">聊一聊</string>
    <string name="buy">买买买</string>
    <string name="title_activity_buy_goods">BuyGoodsActivity</string>
    <string name="real_pay">实付金额</string>
    <string name="pay_way">请选择付款方式</string>
    <string name="title_activity_report_good">ReportGoodActivity</string>
    <string name="report_good">举报商品</string>
    <string name="report_reason">您为什么举报?</string>
    <string name="report_reason_detail">详细描述举报原因(选填)</string>
    <string name="lier">欺诈骗钱</string>
    <string name="break_rule">违规商品</string>
    <string name="gar_ads">垃圾信息/广告骚扰</string>
    <string name="yellew_infor">传播色情信息</string>
    <string name="violence">传播暴力/反动等不良信息</string>
    <string name="commit">提交</string>
    <string name="title_activity_donation_detail">DonationDetailActivity</string>
    <string name="title_activity_donation_report">DonationReportActivity</string>
    <string name="title_activity_my_goods">MyGoodsActivity</string>
    <!-- 三方支付 @heikki -->
    <string name="alipay">支付宝</string>
    <string name="mm">微信</string>
    <string name="unionpay">银联</string>
    <string name="jd">京东</string>
    <string name="baidu">百度钱包</string>
    <string name="add_address">添加收货地址</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_system_msg">SystemMsg</string>
    <string name="title_activity_conversationt">ConversationtActivity</string>
    <string name="title_activity_conversation_list">ConversationListActivity</string>
    <!-- 我的商品 -->
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="mark_sold">标记售出</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_release">ReleaseActivity</string>
    <string name="title_activity_specific_address">SpecificAddressActivity</string>
    <string name="title_activity_report_donation">ReportDonationActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_market">MarketActivity</string>
    <string name="title_activity_send_goods">SendGoodsActivity</string>

    <!-- 发货 -->
    <string name="send_goods">发货</string>
    <string name="expressage_com">物流公司:</string>
    <string name="expressage_num">物流单号:</string>
    <string name="send_hint">\u3000\u3000按照以上信息去你方便的快递代理点给买家下单的商品打包发货，然后根据快递单填写物流公司名称和物流单号就可以提交啦！PS:物流公司和单号一定要填写正确哟^_^</string>
    <string name="title_activity_order_detial">OrderDetialActivity</string>
    <string name="title_activity_donate_detial">DonateDetialActivity</string>
    <string name="title_activity_help_detial">HelpDetialActivity</string>
    <string name="title_activity_market_one">MarketOneActivity</string>
    <string name="title_activity_market_two">MarketTwoActivity</string>
    <string name="title_activity_market_three">MarketThreeActivity</string>
    <string name="title_activity_market_four">MarketFourActivity</string>
    <string name="title_activity_market_five">MarketFiveActivity</string>
    
    <!--  -->
    <drawable name="btn_normal">#ffff3f40</drawable>
 	<drawable name="btn_pressed">#ffaa0808</drawable>
 	<drawable name="btn_normal_yellow">#ffF7AD3D</drawable>
 	<drawable name="btn_pressed_yellow">#ffea8010</drawable>
 	<drawable name="btn_normal_white">#ffffff</drawable>
 	<drawable name="btn_pressed_white">#ffBEBEBE</drawable>

</resources>
