<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F9F8F4"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >
    
      <FrameLayout
        android:id="@+id/erhuo_message_title"
        style="@style/FrameTitlebackground" >

        <TextView
            style="@style/FrameTitleWhiteText"
            android:text="@string/reset" />

        <ImageView
            android:id="@+id/iv_verify_return_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/left_arrow_red"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp" />

    </FrameLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/erhuo_login" />
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#F9F8F4"/>
    
		<LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:layout_marginTop="30dp"
		        android:background="#ffffff"
		        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/iv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lock" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:layout_marginLeft="10dp"
            android:ems="10"
             android:textSize="@dimen/font_middle"
            android:hint="@string/input_pwd_xin"
            android:textColorHint="@color/text_hint_color" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/lock" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:layout_marginLeft="10dp"
             android:textSize="@dimen/font_middle"
            android:hint="@string/input_pwd_again"
            android:inputType="textPassword"
            android:textColorHint="@color/text_hint_color" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:background="#FF3F40"
        android:text="@string/confirm"
        android:textColor="#ffffff" />

   

    </LinearLayout>
  


